# bilal-server

./: .gitignore  README.md  package-lock.json  pyproject.toml
bilal_server/: main.py  models.py  play_athan.py
bilal_server/routers/: __init__.py  client.py
tests/: test_athan_server.py
