[tool.poetry]
name = "bilal_server"
version = "0.1.0"
description = ""
authors = ["Omar & Rafik"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = { version = "^0.70.0", extras = ["all"] }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
