[tool.poetry]
name = "bilal-server"
version = "0.1.0"
description = ""
authors = ["Rafik and Omar"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.70.1"}
PyChromecast = "^10.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
